# autogen-watsonx-client

./: CODEOWNERS  LICENSE  README.md  pyproject.toml
autogen_watsonx_client/: __init__.py  client.py  config.py
doc/: README.md  integration_example.ipynb  integration_example.py  integration_example_multiagent_round_robin.ipynb  integration_example_multiagent_round_robin.py  integration_example_multiagent_selector_agent.ipynb  integration_example_multiagent_selector_agent.py  integration_example_multiagent_swarm.ipynb  integration_example_multiagent_swarm.py  integration_example_streaming.py
tests/: __init__.py
