[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen_watsonx_client"
version = "0.0.3"
dependencies = [
    "autogen-core>=0.4.0.dev9,<0.5", # TODO: remove dev tag after release
    "autogen-ext>=0.4.0.dev9,<0.5",
    "ibm-watsonx-ai>=1.1.22",
]
requires-python = ">=3.10, <3.13"
description = "This is an autogen>=0.4 extension for watsonx client integration."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["autogen", "agent", "AI", "watsonx"]
classifiers = [
  "Programming Language :: Python :: 3"
]
