[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen_watsonx_client"
version = "0.0.7"
dependencies = [
    "autogen-core>=0.4.6",
    "autogen-ext>=0.4.6",
    "ibm-watsonx-ai>=1.2.6",
]
requires-python = ">=3.10, <3.13"
description = "This is an autogen>=0.4 extension for watsonx client integration."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["autogen", "agent", "AI", "watsonx"]
classifiers = [
  "Programming Language :: Python :: 3"
]
